be taken. This is a GA release and the changes described below indicate the changes from the Azure node SDK 0.9.8 available here - https://github.com/Azure/azure-sdk-for-node.

2016.05 Version 1.0.0

BLOB
* The `blob` property of BlobResult has been renamed to `name` to keep consistent with other services API and the `listBlob` API.

TABLE
* Fixed the issue that loses the data type for Edm.Double value like: 1.0.
* Fixed the issue that loses the data precision for Edm.Int64 value when it is outisde of the range (2^53 - 1) to -(2^53 - 1).

2016.03 Version 0.10.0

ALL
* The `signedIdentifiers` parameter and result properties have been changed from array to hash map to avoid non unique signed identifier id.

BLOB
* Added 'COPY' to the BlobUtilities.BlobListingDetails to include copy information in the results.
* Added 'bytesCopied' and 'totalBytes' to the blob result.
* Added the blob result to the callback of BlobService.commitBlocks.
* Moved the properties in the properties object of BlobResult and ContainerResult when listing blobs or containers to the result object.
* Renamed the property names returned from listing blobs or containers to camelCase.
* The `contentType`, `contentEncoding`, `contentLanguage`, `contentDisposition`, 'contentMD5' and `cacheControl` parameters and return values about the blob's content settings are grouped into a `contentSettings` sub property. 
* The `contentMD5` parameter to verify the integrity of the data during the transport is changed to `transactionalContentMD5`
* The `copy*` return values are grouped into a `copy` sub property.
* The `lease*` return values are grouped into a `lease` sub property.
* The options.accessConditions parameter is changed to AccessConditions type.

QUEUE
* Renamed QueueResult.approximatemessagecount to camelCase and change its type to 'number.
* Renamed the property names of QueueMessageResult to camelCase.
* Renamed the parameter options.messagettl of the createMessage API to options.messageTimeToLive.