@@ -87,11 +87,7 @@ QueueMessageResult.parse = function (messageXml, encode) {
   var queueMessageResult = new QueueMessageResult();
   for (var property in messageXml) {
     if (property === Constants.QueueConstants.MESSAGE_TEXT_ELEMENT) {
-      if (encode) {
-        queueMessageResult.messageText = new Buffer(messageXml[property], 'base64').toString();
-      } else {
-        queueMessageResult.messageText = messageXml[property];
-      }
+      queueMessageResult.messageText = messageXml[property];
     } else {
       var resultPropertyName = azureutil.normalizePropertyNameFromXML(property);
       queueMessageResult[resultPropertyName] = messageXml[property];
