@@ -282,7 +282,7 @@ describe('QueueServiceTests', function() {
               assert.ok(queueMessage['messageId']);
               assert.ok(queueMessage['insertionTime']);
               assert.ok(queueMessage['expirationTime']);
-              assert.equal(queueMessage.messageText, messageText1);
+              assert.equal(new Buffer(queueMessage.messageText, 'base64').toString(), messageText1);
 
               assert.ok(peekResponse.isSuccessful);
               assert.equal(peekResponse.statusCode, HttpConstants.HttpResponseCodes.Ok);
@@ -293,7 +293,7 @@ describe('QueueServiceTests', function() {
                 assert.ok(getResponse.isSuccessful);
                 assert.equal(getResponse.statusCode, HttpConstants.HttpResponseCodes.Ok);
 
-                assert.equal(getQueueMessage.messageText, messageText1);
+                assert.equal(new Buffer(getQueueMessage.messageText, 'base64').toString(), messageText1);
 
                 // Delete the message
                 queueService.deleteMessage(queueName, getQueueMessage.messageId, getQueueMessage.popReceipt, function (deleteError, deleteResponse) {
@@ -307,7 +307,7 @@ describe('QueueServiceTests', function() {
                     assert.ok(getResponse2.isSuccessful);
                     assert.equal(getResponse2.statusCode, HttpConstants.HttpResponseCodes.Ok);
 
-                    assert.equal(getQueueMessage2.messageText, messageText2);
+                    assert.equal(new Buffer(getQueueMessage2.messageText, 'base64').toString(), messageText2);
 
                     // Clear messages
                     queueService.clearMessages(queueName, function (clearError, clearResponse) {
@@ -370,7 +370,7 @@ describe('QueueServiceTests', function() {
               assert.ok(queueMessage['messageId']);
               assert.ok(queueMessage['insertionTime']);
               assert.ok(queueMessage['expirationTime']);
-              assert.equal(queueMessage.messageText, messageText1);
+              assert.equal(new Buffer(queueMessage.messageText, 'base64').toString(), messageText1);
 
               assert.ok(peekResponse.isSuccessful);
               assert.equal(peekResponse.statusCode, HttpConstants.HttpResponseCodes.Ok);
@@ -384,7 +384,7 @@ describe('QueueServiceTests', function() {
                 assert.equal(getResponse.statusCode, HttpConstants.HttpResponseCodes.Ok);
 
                 var getQueueMessage = getQueueMessages[0];
-                assert.equal(getQueueMessage.messageText, messageText1);
+                assert.equal(new Buffer(getQueueMessage.messageText, 'base64').toString(), messageText1);
 
                 // Delete message
                 queueService.deleteMessage(queueName, getQueueMessage.messageId, getQueueMessage.popReceipt, function (deleteError, deleteResponse) {
@@ -400,7 +400,7 @@ describe('QueueServiceTests', function() {
                     assert.equal(getResponse2.statusCode, HttpConstants.HttpResponseCodes.Ok);
 
                     var getQueueMessage2 = getQueueMessages2[0];
-                    assert.equal(getQueueMessage2.messageText, messageText2);
+                    assert.equal(new Buffer(getQueueMessage2.messageText, 'base64').toString(), messageText2);
 
                     // Clear messages
                     queueService.clearMessages(queueName, function (clearError, clearResponse) {
@@ -461,7 +461,7 @@ describe('QueueServiceTests', function() {
               assert.ok(queueMessage['messageId']);
               assert.ok(queueMessage['insertionTime']);
               assert.ok(queueMessage['expirationTime']);
-              assert.equal(queueMessage.messageText, messageText1);
+              assert.equal(new Buffer(queueMessage.messageText, 'base64').toString(), messageText1);
 
               assert.ok(peekResponse.isSuccessful);
               assert.equal(peekResponse.statusCode, HttpConstants.HttpResponseCodes.Ok);
@@ -475,7 +475,7 @@ describe('QueueServiceTests', function() {
                 assert.equal(getResponse.statusCode, HttpConstants.HttpResponseCodes.Ok);
 
                 var getQueueMessage = getQueueMessages[0];
-                assert.equal(getQueueMessage.messageText, messageText1);
+              assert.equal(new Buffer(getQueueMessage.messageText, 'base64').toString(), messageText1);
 
                 // Delete message
                 queueService.deleteMessage(queueName, getQueueMessage.messageId, getQueueMessage.popReceipt, function (deleteError, deleteResponse) {
@@ -491,7 +491,7 @@ describe('QueueServiceTests', function() {
                     assert.equal(getResponse2.statusCode, HttpConstants.HttpResponseCodes.Ok);
 
                     var getQueueMessage2 = getQueueMessages2[0];
-                    assert.equal(getQueueMessage2.messageText, messageText2);
+                    assert.equal(new Buffer(getQueueMessage2.messageText, 'base64').toString(), messageText2);
 
                     // Clear messages
                     queueService.clearMessages(queueName, function (clearError, clearResponse) {
@@ -813,7 +813,7 @@ describe('QueueServiceTests', function() {
 
                 // By default only one is returned
                 assert.equal(messages.length, 1);
-                assert.equal(messages[0].messageText, 'msg1');
+                assert.equal(new Buffer(messages[0].messageText, 'base64').toString(), 'msg1');
 
                 queueService.getMessages(queueName, { numOfMessages: 2 }, function (error4, messages2) {
                   assert.equal(error4, null);
@@ -1042,7 +1042,7 @@ describe('QueueServiceTests', function() {
             assert.strictEqual(response.statusCode, HttpConstants.HttpResponseCodes.Ok);
 
             var message = messages[0];
-            assert.equal(message.messageText, text);
+            assert.equal(new Buffer(message.messageText, 'base64').toString(), text);
             done();
           });
         });
@@ -1085,7 +1085,7 @@ describe('QueueServiceTests', function() {
                   assert.strictEqual(response.statusCode, HttpConstants.HttpResponseCodes.Ok);
 
                   var message = messages[0];
-                  assert.equal(message.messageText, text);
+                  assert.equal(new Buffer(message.messageText, 'base64').toString(), text);
                   done();
                 });
               }, 3000);
